Fixed caromelsoupe overlapping

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,3 +1,11 @@
+.page-header {
+  text-align: center;
+}
+
+#myCarousel{
+  z-index: 0;
+}
+
 #accordion a { 
   color: black;
 }
